# knowledge_cache

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  LIFECYCLE_MANAGEMENT.md  MCP_ECOSYSTEM_ANALYSIS.md  README.md  README_REDUCED_SCOPE.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  test_setup.sh
docker/postgres/: Dockerfile
docker/postgres/init/: 01-extensions.sh  02-schema.sql  03-full-schema.sql
src/codebase_knowledge_mcp/: config.py  freshness.py  knowledge_store.py  models.py  run.py  schema.sql  search.py  server.py
